--- a/components/header/header.css
+++ b/components/header/header.css
@@ -104,3 +104,17 @@ ul button:hover {
 div:hover ul {
   display: block;
 }
+
+.github-icon{
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 120px;
+  margin-left: 20px;
+}
+
+.github-icon:hover{
+  scale: 1.1;
+  transition: .5s;
+}
